REPORT-11794 10.0设计器安装路径存在特殊符号会导致插件管理界面资源加载失败